--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
     "joi": "^17.9.2",
+    "luxon": "^3.3.0",
     "nest-winston": "^1.9.3",
     "pg": "^8.11.1",
     "reflect-metadata": "^0.1.13",
@@ -53,6 +54,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/luxon": "^3.3.1",
     "@types/node": "^20.4.1",
     "@types/pg": "^8.10.2",
     "@types/supertest": "^2.0.12",
