--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "joi": "^17.9.2",
     "luxon": "^3.3.0",
     "nest-winston": "^1.9.3",
+    "node-cron": "^3.0.2",
     "pg": "^8.11.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
@@ -56,6 +57,7 @@
     "@types/jest": "^29.5.2",
     "@types/luxon": "^3.3.1",
     "@types/node": "^20.4.1",
+    "@types/node-cron": "^3.0.10",
     "@types/pg": "^8.10.2",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
